Fix AutoHotkey script launching by explicitly calling AutoHotkey executable